--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Xcode
 #
-build/
+F/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -28,6 +28,5 @@ DerivedData
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build
+F/Carthage/Checkouts
+F/Carthage/Build
