add FStatus Class;

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ DerivedData
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 F/Carthage/Checkouts
 F/Carthage/Build
+F/.idea
